apps/gitpath/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitpath
  labels:
    app.kubernetes.io/part-of: gitpath
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
