apps/gitpath/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitpath
  labels:
    app.kubernetes.io/name: gitpath
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitpath
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
